# Ultrasort

./: .gitignore  README.md  UltraSort.py  UltraSort.pyw  Ultra_sort.py  pyproject.toml
Ultrasort-main/: Ultra_sort.py
src/Ultrasort_Teaprogen/: UltraSort.pyw  sortFileType.py
