[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Ultrasort_Teaprogen"
version = "0.5.1"
authors = [
  { name="Teaprogen", email="safariepic@gmail.com" },
]
description = "Sorting program for personal use"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: Microsoft :: Windows :: Windows 10",
]

[project.urls]
"Homepage" = "https://github.com/Teaprogen/Ultrasort"
"Bug Tracker" = "https://github.com/Teaprogen/Ultrasort/issues"